認証画面の追加

--- a/20170808hack-ios/Base.lproj/Main.storyboard
+++ b/20170808hack-ios/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="_0170808hack_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,99 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1w-Ak-qpd">
+                                <rect key="frame" x="63" y="260" width="57" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzW-vp-g7u">
+                                <rect key="frame" x="63" y="367.5" width="74" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fr8-qu-iyD">
+                                <rect key="frame" x="56" y="295.5" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MsI-jC-5Re">
+                                <rect key="frame" x="56" y="403" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8sZ-gP-hT3">
+                                <rect key="frame" x="150" y="479" width="76" height="42"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ak9-qR-tGm">
+                                        <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jin-wz-tm1">
+                                                <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2aV-a8-tyw">
+                                                        <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                        <state key="normal" title="Sign In"/>
+                                                        <connections>
+                                                            <segue destination="QY3-pN-JKX" kind="show" id="89o-v9-m9h"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95973908900000005" green="0.82689285280000002" blue="0.85884416100000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="DzW-vp-g7u" firstAttribute="top" secondItem="Fr8-qu-iyD" secondAttribute="bottom" constant="42" id="0v6-gZ-9K4"/>
+                            <constraint firstItem="8sZ-gP-hT3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="133.5" id="2bK-jc-XeV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MsI-jC-5Re" secondAttribute="trailing" constant="40" id="8TO-gc-yIE"/>
+                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="ALb-yU-mbA"/>
+                            <constraint firstItem="8sZ-gP-hT3" firstAttribute="top" secondItem="MsI-jC-5Re" secondAttribute="bottom" constant="46" id="HIA-4I-WY1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8sZ-gP-hT3" secondAttribute="bottom" constant="146" id="ctl-hx-mh6"/>
+                            <constraint firstItem="MsI-jC-5Re" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="fuL-TC-Q0A"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8sZ-gP-hT3" secondAttribute="trailing" constant="133.5" id="g33-6t-TLv"/>
+                            <constraint firstItem="DzW-vp-g7u" firstAttribute="leading" secondItem="Y1w-Ak-qpd" secondAttribute="leading" id="j6h-Rx-Ow3"/>
+                            <constraint firstItem="MsI-jC-5Re" firstAttribute="top" secondItem="DzW-vp-g7u" secondAttribute="bottom" constant="15" id="jb9-J4-xGR"/>
+                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="top" secondItem="Y1w-Ak-qpd" secondAttribute="bottom" constant="15" id="pHZ-CB-WJ4"/>
+                            <constraint firstItem="DzW-vp-g7u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="47" id="pZH-nY-u4r"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Fr8-qu-iyD" secondAttribute="trailing" constant="40" id="sVF-3D-nzd"/>
+                            <constraint firstItem="8sZ-gP-hT3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sfv-jW-LZW"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passTextField" destination="MsI-jC-5Re" id="ZCE-Kc-Eig"/>
+                        <outlet property="userIDTextField" destination="Fr8-qu-iyD" id="Gnm-iX-Mcg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dVV-u4-OeC">
+            <objects>
+                <viewController id="QY3-pN-JKX" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SsQ-k0-YKT"/>
+                        <viewControllerLayoutGuide type="bottom" id="XrZ-T5-KKW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Fea-Cl-9mJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vUP-bT-w5v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="905" y="137"/>
         </scene>
     </scenes>
 </document>
