--- a/20170808hack-ios/Base.lproj/Main.storyboard
+++ b/20170808hack-ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -123,22 +123,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3NO-f2-tgC">
-                                <rect key="frame" x="67" y="375" width="240" height="151"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5f-U4-Ydz">
-                                <rect key="frame" x="166" y="562" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5f-U4-Ydz">
+                                <rect key="frame" x="167" y="560" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3NO-f2-tgC">
+                                <rect key="frame" x="111" y="443" width="153" height="93"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3NO-f2-tgC" firstAttribute="centerX" secondItem="srX-sA-Bts" secondAttribute="centerX" id="WgQ-mL-XmB"/>
+                            <constraint firstItem="QNc-fM-te4" firstAttribute="top" secondItem="X5f-U4-Ydz" secondAttribute="bottom" constant="37" id="a7h-bY-bhf"/>
+                            <constraint firstItem="X5f-U4-Ydz" firstAttribute="top" secondItem="3NO-f2-tgC" secondAttribute="bottom" constant="24" id="eW8-sb-NoW"/>
+                            <constraint firstItem="3NO-f2-tgC" firstAttribute="leading" secondItem="srX-sA-Bts" secondAttribute="leadingMargin" constant="95" id="mnM-B9-eJd"/>
+                            <constraint firstItem="X5f-U4-Ydz" firstAttribute="centerX" secondItem="srX-sA-Bts" secondAttribute="centerX" id="vNc-ln-Qvu"/>
+                            <constraint firstItem="3NO-f2-tgC" firstAttribute="top" secondItem="jDk-w1-hG9" secondAttribute="bottom" constant="423" id="x4q-a1-vMX"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="6ee-cO-pS6"/>
                     <connections>
+                        <outlet property="partnerImage" destination="3NO-f2-tgC" id="ROS-RG-HTD"/>
                         <outlet property="pulseLabel" destination="X5f-U4-Ydz" id="qqS-Ep-dFj"/>
                     </connections>
                 </viewController>
@@ -180,43 +187,43 @@
                                 <rect key="frame" x="0.0" y="69" width="375" height="549"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5eY-1h-VNH">
-                                    <size key="itemSize" width="303" height="202"/>
+                                    <size key="itemSize" width="156" height="154"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="TUD-Cs-P6t">
-                                        <rect key="frame" x="36" y="0.0" width="303" height="202"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="156" height="154"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="303" height="202"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="156" height="154"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QV8-D3-8L0">
+                                                    <rect key="frame" x="0.0" y="8" width="151" height="136"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6E1-iq-vAf">
-                                                    <rect key="frame" x="117" y="171" width="78" height="24"/>
+                                                    <rect key="frame" x="0.0" y="120" width="151" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.83339576198630139" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="78" id="T8G-LP-8gc"/>
+                                                        <constraint firstAttribute="height" constant="25" id="wem-ZV-Z1m"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QV8-D3-8L0">
-                                                    <rect key="frame" x="50" y="0.0" width="203" height="166"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="166" id="8Tt-2c-SuZ"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="QV8-D3-8L0" firstAttribute="leading" secondItem="TUD-Cs-P6t" secondAttribute="leading" constant="50" id="2wv-7F-lY4"/>
-                                            <constraint firstItem="QV8-D3-8L0" firstAttribute="top" secondItem="TUD-Cs-P6t" secondAttribute="top" id="8lp-nq-umF"/>
-                                            <constraint firstItem="6E1-iq-vAf" firstAttribute="leading" secondItem="TUD-Cs-P6t" secondAttribute="leading" constant="117" id="LEc-EJ-ilZ"/>
-                                            <constraint firstItem="6E1-iq-vAf" firstAttribute="top" secondItem="QV8-D3-8L0" secondAttribute="bottom" constant="5" id="Wwz-d6-mdY"/>
-                                            <constraint firstAttribute="trailing" secondItem="QV8-D3-8L0" secondAttribute="trailing" constant="50" id="xtm-Td-hve"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="QV8-D3-8L0" secondAttribute="bottom" constant="2" id="389-DP-GIE"/>
+                                            <constraint firstItem="6E1-iq-vAf" firstAttribute="leading" secondItem="QV8-D3-8L0" secondAttribute="leading" id="BYx-kn-KDn"/>
+                                            <constraint firstItem="6E1-iq-vAf" firstAttribute="trailing" secondItem="QV8-D3-8L0" secondAttribute="trailing" id="KAK-lq-RLJ"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="QV8-D3-8L0" secondAttribute="trailing" constant="-3" id="TZJ-Cw-Nja"/>
+                                            <constraint firstItem="QV8-D3-8L0" firstAttribute="leading" secondItem="TUD-Cs-P6t" secondAttribute="leading" id="Upi-DL-Uch"/>
+                                            <constraint firstItem="QV8-D3-8L0" firstAttribute="top" secondItem="TUD-Cs-P6t" secondAttribute="topMargin" id="Xgn-vY-08n"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="6E1-iq-vAf" secondAttribute="bottom" constant="1" id="hcp-Gd-t13"/>
                                         </constraints>
                                         <connections>
                                             <segue destination="DyS-FV-Njm" kind="modal" identifier="toSubViewController" id="F8e-p9-h95"/>
@@ -253,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="chU-Zr-ZXE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1894" y="-273"/>
+            <point key="canvasLocation" x="1893.5999999999999" y="-273.01349325337333"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="PvQ-at-FFb">
